--- a/Exercicio01/index.html
+++ b/Exercicio01/index.html
@@ -41,5 +41,31 @@
     <h2>(h2)Sub-título</h2>
     <h3>(h3)Sub-título dentro do h2</h3>
     <p>(p)Parágrafo do h3</p>
+
+    <!-- Formatação de texto --> <hr>
+    <h1>Principais formatações de texto</h1>
+
+    <h2>Negrito/Destaque</h2>
+    <p>Nessa frase temos um <b>Termo em negrito</b> usando a tag &lt;b&gt; (Não semântica)</p>
+    <p>Nesta frase temos um <strong>Termo em destaque</strong> usando a tag &lt;strong&gt; (Semântica)</p>
+
+    <h2>Italico/Ênfase</h2>
+    <p>Nessa frase temos um <i>Termo em italico</i> usando a tag &lt;i&gt; (Não semântica)</p>
+    <p>Nessa frase temos um <em>Termo em Ênfase</em> usando a tag &lt;em&gt; (Semântica)</p>
+
+    <h2>Texto Marcado</h2>
+    <p>Criando um <mark>Texto marcado</mark> Usando a tag &lt;mark&gt;</p>
+
+    <h2>Texto deletado</h2>
+    <p>Marcando um texto como <del>excluido</del></p>
+
+    <h2>Texto inserido</h2>
+    <p>Marcando um texto como <ins>inserido</ins></p>
+
+    <h2>Texto sobrescrito</h2>
+    <p>Inserir coisa como x<sup>20</sup>+5</p>
+    
+    <h2>Texto subscrito</h2>
+    <p>Inserir coisas como H<sub>2</sub>O</p>
 </body>
 </html>
