--- a/Exercicio01/index.html
+++ b/Exercicio01/index.html
@@ -67,5 +67,53 @@
     
     <h2>Texto subscrito</h2>
     <p>Inserir coisas como H<sub>2</sub>O</p>
+
+    <!-- Outras Formatações --> <hr>
+    <h1>Outras formatações</h1>
+    <h2>Código fonte</h2>
+    <p>o comando <code>document.getElementById('teste')</code> é escrito em linguagem JavaScript</p>
+
+    <h2>Pré-formatação</h2>
+    <pre>
+        <code>
+    num = int(input('Digite um valor: '))
+    if num % 2 == 0:
+        print(f'O número {num} é PAR')
+    else:
+        print(f'O número {num} é ÍMPAR')
+    print('Fim do programa')
+        </code>
+    </pre>
+
+    <h2>Citações simples</h2>
+    <p><q>O computador é um burro muito rápido</q></p>
+    <h2>Citações completas</h2>
+    <p>Segundo Jeff Noble, no seu livro HTML para leigos:</p>
+    <blockquote cite="#">A diferença entre elementos inline e um bloco de texto é importante.</blockquote>
+
+    <h2>Abreviações</h2>
+    <p>Estou estudando <abbr title="Hyper Text Markup Language">HTML</abbr> e <abbr title="Cascading Style Sheets">CSS</abbr></p>
+
+    <!-- Listas --> <hr>
+    <h1>Listas</h1>
+    <h2>Listas Ordenadas</h2>
+    <ol type="1">
+        <li>Acordar
+        <li>Tomar café
+        <li>Escovar os dentes
+        <li>Ir para faculdade
+        <li>Ir para o trabalho
+        <li>Jantar e dormir
+    </ol>
+
+    <h2>Listas não ordenadas</h2>
+    <ul type="disc">
+        <li>Pão
+        <li>Leite
+        <li>Arroz
+        <li>Queijo
+        <li>Carne
+        <li>Alface
+    </ul>
 </body>
 </html>
